// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click option 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title">B</span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title">B</span></div>
  <div class="van-dropdown-item" style="top: 0px; z-index: 10;">
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s; display: none; z-index: 2005;" name="van-popup-slide-top">
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title" style=""><span>A</span></div>
      </div>
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title" style="color: rgb(25, 137, 250);"><span>B</span></div>
        <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon" style="color: rgb(25, 137, 250);">
            <!----></i></div>
      </div>
    </div>
  </div>
  <div class="van-dropdown-item" style="top: 0px; z-index: 10; display: none;">
    <!---->
  </div>
</div>
`;

exports[`destroy one item 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title">A</span></div>
  <!---->
  <div class="van-dropdown-item" style="top: 0px; z-index: 10; display: none;">
    <!---->
  </div>
</div>
`;

exports[`didn\`t find matched option 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"></span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title"></span></div>
  <div class="van-dropdown-item" style="top: 0px; z-index: 10; display: none;">
    <!---->
  </div>
  <div class="van-dropdown-item" style="top: 0px; z-index: 10; display: none;">
    <!---->
  </div>
</div>
`;

exports[`disable dropdown item 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="-1" class="van-dropdown-menu__item van-dropdown-menu__item--disabled"><span class="van-dropdown-menu__title">A</span></div>
  <div class="van-dropdown-item" style="top: 0px; z-index: 10; display: none;">
    <!---->
  </div>
</div>
`;

exports[`show dropdown item 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title" style="color: rgb(25, 137, 250);">A</span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title">A</span></div>
  <div class="van-dropdown-item" style="top: 0px; z-index: 10;">
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s;" name="van-popup-slide-top">
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title" style="color: rgb(25, 137, 250);"><span>A</span></div>
        <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon" style="color: rgb(25, 137, 250);">
            <!----></i></div>
      </div>
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title"><span>B</span></div>
      </div>
    </div>
    <div class="van-overlay van-fade-enter van-fade-enter-active" style="z-index: 2000; z-index: 2000; position: absolute;"></div>
  </div>
  <div class="van-dropdown-item" style="top: 0px; z-index: 10; display: none;">
    <!---->
  </div>
</div>
`;

exports[`show dropdown item 2`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title" style="">A</span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title">A</span></div>
  <div class="van-dropdown-item" style="top: 0px; z-index: 10;">
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s; display: none;" name="van-popup-slide-top">
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title" style="color: rgb(25, 137, 250);"><span>A</span></div>
        <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon" style="color: rgb(25, 137, 250);">
            <!----></i></div>
      </div>
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title"><span>B</span></div>
      </div>
    </div>
    <div class="van-overlay van-fade-leave van-fade-leave-active" style="z-index: 2000; z-index: 2000; position: absolute;"></div>
  </div>
  <div class="van-dropdown-item" style="top: 0px; z-index: 10; display: none;">
    <!---->
  </div>
</div>
`;

exports[`show dropdown item 3`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title" style="">A</span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title" style="color: rgb(25, 137, 250);">A</span></div>
  <div class="van-dropdown-item" style="top: 0px; z-index: 10;">
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s; display: none;" name="van-popup-slide-top">
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title" style="color: rgb(25, 137, 250);"><span>A</span></div>
        <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon" style="color: rgb(25, 137, 250);">
            <!----></i></div>
      </div>
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title"><span>B</span></div>
      </div>
    </div>
  </div>
  <div class="van-dropdown-item" style="top: 0px; z-index: 10;">
    <div class="van-popup van-popup--top van-dropdown-item__content" style="transition-duration: 0.2s;" name="van-popup-slide-top">
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title" style="color: rgb(25, 137, 250);"><span>A</span></div>
        <div class="van-cell__value"><i class="van-icon van-icon-success van-dropdown-item__icon" style="color: rgb(25, 137, 250);">
            <!----></i></div>
      </div>
      <div class="van-cell van-cell--clickable">
        <div class="van-cell__title"><span>B</span></div>
      </div>
    </div>
    <div class="van-overlay van-fade-enter van-fade-enter-active" style="z-index: 2001; z-index: 2001; position: absolute;"></div>
  </div>
</div>
`;

exports[`title prop 1`] = `
<div class="van-dropdown-menu van-hairline--top-bottom">
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title">Title</span></div>
  <div role="button" tabindex="0" class="van-dropdown-menu__item"><span class="van-dropdown-menu__title">Title</span></div>
  <div class="van-dropdown-item" style="top: 0px; z-index: 10; display: none;">
    <!---->
  </div>
  <div class="van-dropdown-item" style="top: 0px; z-index: 10; display: none;">
    <!---->
  </div>
</div>
`;
